--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE HTML/>
-<head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.0.0/d3.min.js" integrity="sha512-0x7/VCkKLLt4wnkFqI8Cgv6no+AaS1TDgmHLOoU3hy/WVtYta2J6gnOIHhYYDJlDxPqEqAYLPS4gzVex4mGJLw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="main.js"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="main.css"></link>
-</head>
-<body>
-  <div id="timeline"></div>
-</body>
+<html ng-app="app" ng-controller="ctrl">
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.0.0/d3.min.js" integrity="sha512-0x7/VCkKLLt4wnkFqI8Cgv6no+AaS1TDgmHLOoU3hy/WVtYta2J6gnOIHhYYDJlDxPqEqAYLPS4gzVex4mGJLw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-animate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.4/angular-sanitize.min.js" integrity="sha512-zIcdv1GbeK4BRG8F1+d238N9aCF6EZq5edKdElLtG8sT4V+1sz87cIf+QngHESim2f0xEcwRbAC9ZlRHublq4A==" crossorigin="anonymous"></script>
+    <!--font-awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js" integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg==" crossorigin="anonymous"></script>
+    <script src = "js/jquery.ezplus.js"></script>
+    <script src="js/angular-ezplus.js"></script>
+    <script src="js/main.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css"></link>
+  </head>
+  <body>
+    <div id="mode-toggle">
+      <div class="mode-icon"  ng-click = "toggle_mode()" ng-style="{ 'background-color': model.view_mode? '' : 'rgba(23, 150, 17, 0.4)' }"><i class="fa fa-code"></i></div>
+      <div class="mode-icon"  ng-click = "toggle_mode()" ng-style="{ 'background-color': model.view_mode? 'rgba(23, 150, 17, 0.4)' : '' }"><i class="fa fa-pen"></i></div>
+   </div>
+    <div class="mode" id="handdrawn">
+      <div class="img-container">
+        <img  ez-plus ezp-model="{ small:'frise_lola.png', large:'frise_lola_big.jpg'}" ezp-options="{ zoomType:'lens', lensShape:'round', lensSize:'300'}"  src='frise_lola_big.jpg'>
+      </div>
+    </div>
+    <div class="mode">
+      <div id="timeline"></div>
+    </div>
+  </body>
+</html>
